--- a/DifferentialEquations/Hodgkin & Huxley.ipynb
+++ b/DifferentialEquations/Hodgkin & Huxley.ipynb
@@ -895,7 +895,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
+      "display_name": "env",
       "language": "python",
       "name": "python3"
     },
@@ -909,7 +909,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.6"
+      "version": "3.11.9"
     }
   },
   "nbformat": 4,
