--- a/PyTorch/FashionMNIST.ipynb
+++ b/PyTorch/FashionMNIST.ipynb
@@ -34,20 +34,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "id": "QsfFvPYhkCGl"
    },
    "outputs": [
     {
      "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'matplotlib'",
+     "evalue": "No module named 'sklearn'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[6], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# 1.2)\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m cm\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'matplotlib'"
+      "Cell \u001b[1;32mIn[2], line 7\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mscipy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01msp\u001b[39;00m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mscipy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mlinalg\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mlinalg\u001b[39;00m\n\u001b[1;32m----> 7\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mskl\u001b[39;00m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m#import dill\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'sklearn'"
      ]
     }
    ],
@@ -70,7 +70,19 @@
    "metadata": {
     "id": "Uot5sVNnkCNa"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'torch'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# 1.3)\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01moptim\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01moptim\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m nn\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'torch'"
+     ]
+    }
+   ],
    "source": [
     "# 1.3)\n",
     "import torch\n",
@@ -211,7 +223,56 @@
     }
    ],
    "source": [
-    "# 2.1)"
+    "transform = transforms.Compose([\n",
+    "    transforms.ToTensor(),  # Convertir las imágenes a tensores\n",
+    "])                          # Esto ya normaliza los valores entre 0 y 1\n",
+    "\n",
+    "\n",
+    "train_dataset = datasets.FashionMNIST(\n",
+    "    root=\"./data\",       # Directorio donde se almacenará el dataset\n",
+    "    train=True,          \n",
+    "    download=True,       \n",
+    "    transform=transform  # Aplicar transformaciones\n",
+    ")\n",
+    "\n",
+    "test_dataset = datasets.FashionMNIST(\n",
+    "    root=\"./data\",\n",
+    "    train=False,         # False para descargar el conjunto de prueba\n",
+    "    download=True,\n",
+    "    transform=transform\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fashion_mnist_labels = {\n",
+    "    0: \"T-shirt/top\",\n",
+    "    1: \"Trouser\",\n",
+    "    2: \"Pullover\",\n",
+    "    3: \"Dress\",\n",
+    "    4: \"Coat\",\n",
+    "    5: \"Sandal\",\n",
+    "    6: \"Shirt\",\n",
+    "    7: \"Sneaker\",\n",
+    "    8: \"Bag\",\n",
+    "    9: \"Ankle boot\"\n",
+    "}\n",
+    "\n",
+    "\n",
+    "fig, axes = plt.subplots(3, 3, figsize=(8, 8))\n",
+    "for i, ax in enumerate(axes.flatten()):\n",
+    "    image, label = train_dataset[i]  \n",
+    "    image = image.squeeze()  # Eliminar la dimensión extra (El canal de grises)\n",
+    "    ax.imshow(image, cmap=\"gray\")  \n",
+    "    ax.set_title(fashion_mnist_labels[label])  \n",
+    "    ax.axis(\"off\")  \n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   },
   {
@@ -247,7 +308,16 @@
    },
    "outputs": [],
    "source": [
-    "# 3.1)"
+    "train_set, valid_set = random_split(train_dataset, [50000, 10000])  # Dividir en train y validación\n",
+    "\n",
+    "train_loader = DataLoader(dataset=train_set, batch_size=100, shuffle=True)\n",
+    "valid_loader = DataLoader(dataset=valid_set, batch_size=100, shuffle=True)\n",
+    "test_loader = DataLoader(dataset=test_dataset, batch_size=100, shuffle=True)\n",
+    "\n",
+    "# Verificar que se haya cargado correctamente\n",
+    "for images, labels in train_loader:\n",
+    "    print(f\"Lote de imágenes: {images.size()}, Lote de etiquetas: {labels.size()}\")\n",
+    "    break"
    ]
   },
   {
@@ -274,7 +344,30 @@
    },
    "outputs": [],
    "source": [
-    "# 4)"
+    "class NeuralNet(nn.Module):\n",
+    "    def __init__(self, input_size, output_size):\n",
+    "        super(NeuralNet, self).__init__()\n",
+    "\n",
+    "        # Definir las capas de la red\n",
+    "        self.model = nn.Sequential(\n",
+    "            nn.Linear(input_size, 128),  # Capa de entrada a la primera capa oculta\n",
+    "            nn.ReLU(),                  # Activación ReLU\n",
+    "            nn.Dropout(p=0.2),          # Dropout con probabilidad 0.2\n",
+    "            nn.Linear(128, 64),         # Primera capa oculta a la segunda\n",
+    "            nn.ReLU(),                  # Activación ReLU\n",
+    "            nn.Dropout(p=0.2),          # Dropout con probabilidad 0.2\n",
+    "            nn.Linear(64, output_size)  # Segunda capa oculta a la salida\n",
+    "            # Sin función de activación ni dropout en la capa de salida\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        return self.model(x)\n",
+    "\n",
+    "\n",
+    "input_size = 28 * 28  \n",
+    "output_size = 10     \n",
+    "\n",
+    "model = NeuralNet(input_size, output_size)"
    ]
   },
   {
@@ -334,7 +427,142 @@
    },
    "outputs": [],
    "source": [
-    "# 5.1)"
+    "def train_loop(model, train_loader, criterion, optimizer, device):\n",
+    "    model.train()  # Poner la red en modo de entrenamiento\n",
+    "    total_loss = 0\n",
+    "    correct = 0\n",
+    "    for batch_idx, (data, target) in enumerate(train_loader):\n",
+    "        data, target = data.to(device), target.to(device)  \n",
+    "        data = data.view(data.size(0), -1)  # Aplanar las imágenes (28x28 -> 784)\n",
+    "\n",
+    "        optimizer.zero_grad()  # Limpiar gradientes previos\n",
+    "        output = model(data)  # Paso hacia adelante\n",
+    "        loss = criterion(output, target)  # Calcular la pérdida\n",
+    "        loss.backward()  # Paso hacia atrás\n",
+    "        optimizer.step()  # Actualizar los parámetros\n",
+    "\n",
+    "        total_loss += loss.item()\n",
+    "        pred = output.argmax(dim=1, keepdim=True)  # Obtener predicciones\n",
+    "        correct += pred.eq(target.view_as(pred)).sum().item()\n",
+    "\n",
+    "    avg_loss = total_loss / len(train_loader)\n",
+    "    accuracy = 100. * correct / len(train_loader.dataset)\n",
+    "    return avg_loss, accuracy\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def valid_loop(model, valid_loader, criterion, device):\n",
+    "    model.eval()  # Poner la red en modo de evaluación\n",
+    "    total_loss = 0\n",
+    "    correct = 0\n",
+    "\n",
+    "    with torch.no_grad():  # Desactivar el cálculo de gradientes\n",
+    "        for batch_idx, (data, target) in enumerate(valid_loader):\n",
+    "            data, target = data.to(device), target.to(device)  \n",
+    "            data = data.view(data.size(0), -1)  \n",
+    "\n",
+    "            output = model(data)  # Paso hacia adelante\n",
+    "            loss = criterion(output, target)  # Calcular la pérdida\n",
+    "\n",
+    "            total_loss += loss.item()\n",
+    "            pred = output.argmax(dim=1, keepdim=True)  # Obtener predicciones\n",
+    "            correct += pred.eq(target.view_as(pred)).sum().item()\n",
+    "\n",
+    "    avg_loss = total_loss / len(valid_loader)\n",
+    "    accuracy = 100. * correct / len(valid_loader.dataset)\n",
+    "\n",
+    "    return avg_loss, accuracy\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Definir la función de pérdida\n",
+    "criterion = nn.CrossEntropyLoss()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "learning_rate = 1e-3\n",
+    "optimizer = optim.SGD(model.parameters(), lr=learning_rate)\n",
+    "\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "model.to(device)\n",
+    "print(f\"Modelo trabajando en: {device}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_epochs = 100\n",
+    "train_losses, train_accuracies = [], []\n",
+    "valid_losses, valid_accuracies = [], []\n",
+    "\n",
+    "for epoch in range(1, num_epochs + 1):\n",
+    "    print(f\"\\nÉpoca {epoch}/{num_epochs}\")\n",
+    "\n",
+    "    # Entrenamiento\n",
+    "    train_loss, train_accuracy = train_loop(model, train_loader, criterion, optimizer, device)\n",
+    "    train_losses.append(train_loss)\n",
+    "    train_accuracies.append(train_accuracy)\n",
+    "\n",
+    "    # Validación\n",
+    "    valid_loss, valid_accuracy = valid_loop(model, valid_loader, criterion, device)\n",
+    "    valid_losses.append(valid_loss)\n",
+    "    valid_accuracies.append(valid_accuracy)\n",
+    "\n",
+    "    print(f\"Resumen - Época {epoch}:\")\n",
+    "    print(f\"  Pérdida de entrenamiento: {train_loss:.4f}\")\n",
+    "    print(f\"  Pérdida de validación: {valid_loss:.4f}, Precisión de validación: {valid_accuracy:.2f}%\")\n",
+    "\n",
+    "print(\"\\nEntrenamiento finalizado.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(1, 2, figsize=(15, 5))\n",
+    "\n",
+    "# Gráfico de pérdidas (Train vs Validation)\n",
+    "ax[0].plot(train_losses, label='Pérdida de Entrenamiento', color='blue', linestyle='-', marker='o')\n",
+    "ax[0].plot(valid_losses, label='Pérdida de Validación', color='orange', linestyle='--', marker='s')\n",
+    "ax[0].set_title('Pérdidas durante el Entrenamiento', fontsize=14)\n",
+    "ax[0].set_xlabel('Épocas', fontsize=12)\n",
+    "ax[0].set_ylabel('Pérdida', fontsize=12)\n",
+    "ax[0].legend(fontsize=10)\n",
+    "ax[0].grid(True, linestyle='--', alpha=0.7)\n",
+    "\n",
+    "# Gráfico de precisiones (Train vs Validation)\n",
+    "ax[1].plot(train_accuracies, label='Precisión de Entrenamiento', color='green', linestyle='-', marker='o')\n",
+    "ax[1].plot(valid_accuracies, label='Precisión de Validación', color='red', linestyle='--', marker='s')\n",
+    "\n",
+    "ax[1].set_title('Precisión durante el Entrenamiento', fontsize=14)\n",
+    "ax[1].set_xlabel('Épocas', fontsize=12)\n",
+    "ax[1].set_ylabel('Precisión (%)', fontsize=12)\n",
+    "ax[1].legend(fontsize=10)\n",
+    "ax[1].grid(True, linestyle='--', alpha=0.7)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "\n",
+    "plt.show()"
    ]
   }
  ],
@@ -356,7 +584,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
